fixing answer buttons

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
  <section id="mainContent">
      <h1>Trivia Game</h1>
      <div id="mainContent"></div>
+        <div id="warning"></div>
         <div id="countdown"></div>
         <div id="dispQuestion"></div>
         <div id="dispAnswers"></div>
 
  </section>
 </body>
-<script src="assets/javascript/game2.js"></script>
+<script src="assets/javascript/game.js"></script>
 </html>
