fixing answer buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="warning"></div>
         <div id="countdown"></div>
         <div id="dispQuestion"></div>
-        <div id="dispAnswers"></div>
+        <div class=answerButtons id="dispAnswers"></div>
 
  </section>
 </body>
