working on styling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="countdown"></div>
         <div id="dispQuestion"></div>
         <div class=answerButtons id="dispAnswers"></div>
+        <div id="imageDisplay"></div>
 
  </section>
 </body>
