--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Kumar+One" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivia Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <title>Collin Triva :D</title>
 </head>
 <body>
  <section id="mainContent">
-     <h1>Trivia Game</h1>
+     <h1 id="header">Collin Trivia!</h1>
      <div id="mainContent"></div>
+     <div id="instruct"><p>How well do you know Collin? Find out in this amazing trivia game all about him!!</p></div>
         <div id="warning"></div>
         <div id="countdown"></div>
         <div id="dispQuestion"></div>
